--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 default: &DEFAULT
-  Host: binlog.ckxthqwwytnf.us-east-1.rds.amazonaws.com
+  Host: <host>
   Port: 3306
   User: binlog
-  Password: binlogbinlog
+  Password: <password>
   IncludeTables:
     - binlogtest.event
   Flavor: mysql
